--- a/data/equipment/consumable-16-mamIdMfPguGM8QV7.htm
+++ b/data/equipment/consumable-16-mamIdMfPguGM8QV7.htm
@@ -15,8 +15,8 @@ Nom: Larmes de minuit
 Les alchimistes ont raffiné le pollen dévastateur et allergène de l'orchidée veuve pour créer ce venin, qui provoque rapidement une fuite de mucus et un gonflement des yeux de la victime.
 <hr />
 <p><strong>Activate</strong> <span class="pf2-icon">T</span> Interagir (Blessure)</p>
-<p><strong>Jet de sauvegarde</strong> Vigueur DD 36</p>
-<p><strong>Durée maximale</strong> 6 rounds</p>
-<p><strong>Stade 1</strong> [[/r 6d6#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Ébloui} (1 round)</p>
-<p><strong>Stade 2</strong> [[/r 7d6#poison]] dégâts de poison, Ébloui, et @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 1 (1 round)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 36;</p>
+<p><strong>Durée maximale</strong> 6 rounds;</p>
+<p><strong>Stade 1</strong> [[/r 6d6#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Ébloui} (1 round);</p>
+<p><strong>Stade 2</strong> [[/r 7d6#poison]] dégâts de poison, Ébloui, et @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 1 (1 round);</p>
 <p><strong>Stade 3</strong> [[/r 8d6#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.XgEqL1kFApUbl5Z2]{Aveuglé} (1 round)</p>
