--- a/data/equipment/consumable-16-tnCKwIsRsKj3FtG6.htm
+++ b/data/equipment/consumable-16-tnCKwIsRsKj3FtG6.htm
@@ -5,4 +5,4 @@ Nom: Piège de lances directionnelles
 ------ Description (en) ------
 <p><span>As soon as a creature enters the snare's square, the snare unleashes wickedly powerful spears at the creature from all directions, dealing 19d8 piercing damage (DC 37 basic Reflex). </span></p>
 ------ Description (fr) ------
-<p><span>Dès qu'une créature entre dans le carré du collet'le collet libère des lances méchamment puissantes sur la créature de toutes les directions, lui infligeant 19d8 dégâts perforants (DC 37 Réflexes de base). </span></p>
+<p><span>Dès qu'une créature entre dans la case du piège, celui-ci libère des lances méchamment puissantes dans toutes les directions vers la créature, lui infligeant 19d8 dégâts perforants (Réflexe DD 37). </span></p>
