--- a/data/equipment/consumable-01-ktjFOp3U0wQD9t0Z.htm
+++ b/data/equipment/consumable-01-ktjFOp3U0wQD9t0Z.htm
@@ -1,13 +1,12 @@
 Name: Antidote (Lesser)
-Nom: Antidote (Inférieur)
-État: changé
-État d'origine: officielle
+Nom: Antidote (inférieur)
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 <p>An antidote protects you against toxins. Upon drinking an antidote, you gain a +2 item bonus to Fortitude saving throws against poisons for 6 hours.</p>
 <p>@Compendium[pf2e.consumable-effects.7z1iY4AaNEAIKuAU]{Effect: Antidote (Lesser)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interaction</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <p>Un antidote vous protège contre les toxines. Lorsque vous le buvez, vous recevez un bonus d’objet de +2 aux jets de Vigueur contre les poisons pendant 6 heures.</p>
-<p>@Compendium[pf2e.spell-effects.7z1iY4AaNEAIKuAU]{Effet: Antidote (Inférieur)}</p>
+<p>@Compendium[pf2e.spell-effects.7z1iY4AaNEAIKuAU]{Effet: Antidote (inférieur)}</p>
