--- a/data/equipment/consumable-01-oplQpQSTyTvHDDtq.htm
+++ b/data/equipment/consumable-01-oplQpQSTyTvHDDtq.htm
@@ -1,11 +1,12 @@
 Name: Marking Snare
 Nom: Piège artisanal marqueur
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><span>This snare is often used to mark intruders for later tracking or identification. When you create this snare, you must decide whether to make it a dye or a scent marker. Either type of marking grants a +2 circumstance bonus to Track the creature for up to 24 hours or until the dye or scent is washed off (requiring at least a gallon of water and 10 minutes of scrubbing). A creature that enters a square of the snare must attempt a DC 17 Reflex save.<br /></span></p>
 <p><span><strong>Success</strong> The creature is unaffected.<br /><strong>Failure</strong> The snare marks the creature.<br /><strong>Critical Failure</strong> The snare marks the creature, and the creature is blinded until the end of its next turn. </span></p>
 ------ Description (fr) ------
-<p><span>Ce piège artisanal est souvent utilisé pour marquer les intrus afin de pouvoir les pister ou les identifier par la suite. Quand vous fabriquez ce piège artisanal, vous devez décider si vous créez de la teinture ou une odeur en guise de marqueur. L’un ou l’autre de ces marqueurs confère un bonus de circonstances de +2 pour Pister la créature pendant un maximum de vingt‑quatre heures ou jusqu’à ce que la teinture ou l’odeur soit nettoyée (ce qui nécessite au moins cinq litres d’eau et dix minutes de récurage). Une créature qui entre dans une case contenant le piège artisanal doit faire un jet de Réflexes DD 17.<br></span></p>
-<p><span><strong>Succès</strong>;La créature n’est pas affectée.<br><strong>Echec</strong>&nbsp;Le piège artisanal marque la créature.<br><strong>Échec critique</strong>;Le piège marque la créature et celle‑ci est aveugle jusqu’à la fin de son prochain tour.&nbsp;</span></p>
+<p>Ce piège artisanal est souvent utilisé pour marquer les intrus afin de pouvoir les pister ou les identifier par la suite. Quand vous fabriquez ce piège artisanal, vous devez décider si vous créez de la teinture ou une odeur en guise de marqueur. L’un ou l’autre de ces marqueurs confère un bonus de circonstances de +2 pour Pister la créature pendant un maximum de vingt‑quatre heures ou jusqu’à ce que la teinture ou l’odeur soit nettoyée (ce qui nécessite au moins cinq litres d’eau et dix minutes de récurage). Une créature qui entre dans une case contenant le piège artisanal doit faire un jet de Réflexes DD 17.</p>
+<p><strong>Succès</strong>;La créature n’est pas affectée.</p>
+<p><strong>Echec</strong>&nbsp;Le piège artisanal marque la créature.</p>
+<p><strong>Échec critique</strong>;Le piège marque la créature et celle‑ci est aveugle jusqu’à la fin de son prochain tour.</p>
