--- a/data/equipment/consumable-01-PNwgGnN081l0cETR.htm
+++ b/data/equipment/consumable-01-PNwgGnN081l0cETR.htm
@@ -1,7 +1,6 @@
 Name: Blood Sap
 Nom: Sève sanglante
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This potent drug is distilled from a certain tropical vine into a deep-red syrup that, over time, stains the user's lips and teeth a vivid shade of red.</p>
@@ -16,9 +15,9 @@ Nom: Sève sanglante
 <p>Cette puissante drogue est distillée à partir de vignes tropicales pour produire un sirop rouge sang qui, avec le temps, colore d’une teinte
 rouge vif les lèvres de ceux qui en consomment.</p>
 <hr>
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir (Ingéré)</p>
-<p><strong>Jet de sauvegarde</strong> Vigueur DD 16</p>
-<p><strong>Délai</strong> 10 minutes</p>
-<p><strong>Durée maximale</strong> 3 heures</p>
-<p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} 1, bonus d’objet de +1 aux jets d’attaque avec des armes ou à mains nues, aux tests d’Acrobaties et aux tests d’Athlétisme (10 min) ; </p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 16;</p>
+<p><strong>Délai</strong> 10 minutes;</p>
+<p><strong>Durée maximale</strong> 3 heures;</p>
+<p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} 1, bonus d’objet de +1 aux jets d’attaque avec des armes ou à mains nues, aux tests d’Acrobaties et aux tests d’Athlétisme (10 min); </p>
 <p><strong>Stade 2</strong> @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Ralenti} 1 (1 heure)</p>
