--- a/data/equipment/consumable-01-qoM7Va5GqcLLBzgu.htm
+++ b/data/equipment/consumable-01-qoM7Va5GqcLLBzgu.htm
@@ -1,13 +1,12 @@
 Name: Owlbear Claw
 Nom: Griffe d'hibours
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">F</span> Envision</p>
 <p><strong>Trigger</strong> You critically succeed at an attack roll with the affixed weapon</p>
 <p>This claw set in an iron clasp and chain isn't always the claw of an owlbear. When you activate the claw, the triggering attack gains the weapon's critical specialization effect.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">F</span> Imaginer</p>
-<p><span>Cette griffe sertie dans une broche de fer attachée par une chaîne n’appartient pas toujours à un hibours. Lorsque vous l’activez, l’attaque déclencheur gagne l’effet critique spécialisé pour l’arme. <br></span></p>
-<p><strong>Déclencheur</strong>  Vous réussissez un succès critique sur un jet d’attaque avec l’arme support.</span></p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Imaginer</p>
+<p>Cette griffe sertie dans une broche de fer attachée par une chaîne n’appartient pas toujours à un hibours. Lorsque vous l’activez, l’attaque déclencheur gagne l’effet critique spécialisé pour l’arme.</p>
+<p><strong>Déclencheur</strong>  Vous réussissez un succès critique sur un jet d’attaque avec l’arme support.</p>
