--- a/data/equipment/consumable-01-RjuupS9xyXDLgyIr.htm
+++ b/data/equipment/consumable-01-RjuupS9xyXDLgyIr.htm
@@ -1,7 +1,6 @@
 Name: Scroll of 1st-level Spell
 Nom: Parchemin de sort de niveau 1
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><span>Casting a Spell from a scroll requires holding the scroll in one hand and activating it with a Cast a Spell activity using the normal number of actions for that spell.<br /></span></p>
