--- a/data/equipment/consumable-01-txmX5ghhPS72GKXy.htm
+++ b/data/equipment/consumable-01-txmX5ghhPS72GKXy.htm
@@ -1,7 +1,6 @@
 Name: Giant Centipede Venom
 Nom: Venin de mille-pattes géant
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Giant centipede venom causes severe muscle stiffness.</p>
@@ -13,10 +12,10 @@ Nom: Venin de mille-pattes géant
 <p><strong>Stage 3</strong> [[/r 1d12#poison]] poison damage, @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Clumsy} 1, and flat-footed (1 round)</p>
 ------ Description (fr) ------
 <p><span>Le venin de mille-pattes géant cause une forte raideur dans les muscles.<br></span></p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <p><span><strong>Jet de sauvegarde</strong> Vigueur DD 17; </p>
 <p><strong>Durée maximum</strong> 6 rounds;</p> 
-<p><strong>Stade 1</strong>[[/r 1d6#poison]] dégâts de poison (1 round); </p>
+<p><strong>Stade 1</strong> [[/r 1d6#poison]] dégâts de poison (1 round); </p>
 <p><strong>Stade 2</strong> [[/r 1d8#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris au dépourvu} (1 round); 
 </p>
 <p><strong>Stade 3</strong> [[/r 1d12#poison]] dégâts de poison, @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroit} 1 et pris au dépourvu (1 round)></span></p>
-<p><p><span><strong>Activate</strong> <img class="actiondark" style="height: 15px; padding: 0px 2px 0px 2px;" src="https://2e.aonprd.com/Images/Actions/TwoActions.png" alt="Two Actions"> Interaction</span></p>
