--- a/data/equipment/consumable-01-tyt6rFtv32MZ4DT9.htm
+++ b/data/equipment/consumable-01-tyt6rFtv32MZ4DT9.htm
@@ -8,6 +8,6 @@ Nom: Elixir du guépard (Inférieur)
 <p>Enzymatic compounds in this elixir strengthen and excite the muscles in your legs. You gain a +5 foot status bonus to your Speed for 1 minute.</p>
 <p>@Compendium[pf2e.consumable-effects.lNWACCNe9RYgaFxb]{Effect: Cheetah's Elixir (Lesser)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> interagir</p>
 <p>Les composés enzymatiques de cet élixir renforcent et excitent les muscles de vos jambes. Vous obtenez un bonus de +1,5 mètres à votre Vitesse pendant 1 minute.</p>
-<p>@Compendium[pf2e.spell-effects.lNWACCNe9RYgaFxb]{Effet: Élixir du guépard (Inférieur)}</p>
+<p>@Compendium[pf2e.spell-effects.lNWACCNe9RYgaFxb]{Effet: Élixir du guépard (inférieur)}</p>
