--- a/data/equipment/consumable-05-AqLxu3ir4UGzdOaz.htm
+++ b/data/equipment/consumable-05-AqLxu3ir4UGzdOaz.htm
@@ -1,14 +1,13 @@
 Name: Cheetah's Elixir (Moderate)
 Nom: Elixir du guépard (modéré)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 <p>Enzymatic compounds in this elixir strengthen and excite the muscles in your legs. You gain a +10 foot status bonus to your Speed for 10 minutes.</p>
 <p>@Compendium[pf2e.consumable-effects.j9zVZwRBVAcnpEkE]{Effect: Cheetah's Elixir (Moderate)}</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 Les composés enzymatiques de cet élixir renforcent et excitent les muscles de vos jambes. 
 <p><strong>Avantage</strong>Vous gagnez un bonus de statut à la Vitesse de +3 mètres. </p>
 <p><strong>Durée</strong> 10 minutes.</p>
