--- a/data/equipment/consumable-01-tyt6rFtv32MZ4DT9.htm
+++ b/data/equipment/consumable-01-tyt6rFtv32MZ4DT9.htm
@@ -8,5 +8,7 @@ Nom: Elixir du guépard (Inférieur)
 <p>@Compendium[pf2e.consumable-effects.lNWACCNe9RYgaFxb]{Effect: Cheetah's Elixir (Lesser)}</p>
 ------ Description (fr) ------
 <p><strong>Activation</strong> <span class="pf2-icon">A</span> interagir</p>
-<p>Les composés enzymatiques de cet élixir renforcent et excitent les muscles de vos jambes. Vous obtenez un bonus de +1,5 mètres à votre Vitesse pendant 1 minute.</p>
+<p>Les composés enzymatiques de cet élixir renforcent et excitent les muscles de vos jambes.
+<p><strong>Avantage</strong>Vous gagnez un bonus de statut à la Vitesse de +1,5 mètres. </p>
+<p><strong>Durée</strong> 1 minute.</p>
 <p>@Compendium[pf2e.spell-effects.lNWACCNe9RYgaFxb]{Effet: Élixir du guépard (inférieur)}</p>
