--- a/data/equipment/consumable-14-kajpTXg3oHIJStQa.htm
+++ b/data/equipment/consumable-14-kajpTXg3oHIJStQa.htm
@@ -1,7 +1,6 @@
 Name: Antiplague (Major)
 Nom: Antimaladie (majeur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -9,6 +8,6 @@ Nom: Antimaladie (majeur)
 <p>When you drink the antiplague, you can immediately attempt a saving throw against one disease of 14th level or lower affecting you. If you succeed, you are cured of the disease.</p>
 <p>@Compendium[pf2e.consumable-effects.qVKrrKpTghgMIuGH]{Effect: Antiplague (Major)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
-<p><span>L’antimaladie renforce les défenses du corps contre les maladies. Lorsque vous le buvez, vous recevez un bonus d’objet de +4 aux jets de Vigueur contre les maladies pendant 24 heures. Cela s’applique aussi à vos jets de sauvegarde contre la progression d’une maladie. En cas de succès, vous êtes guéri.</span></p>
-<p>@Compendium[pf2e.consumable-effects.qVKrrKpTghgMIuGH]{Effet: Antimaladie (Majeur)}</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
+<p>>L’antimaladie renforce les défenses du corps contre les maladies. Lorsque vous le buvez, vous recevez un bonus d’objet de +4 aux jets de Vigueur contre les maladies pendant 24 heures. Cela s’applique aussi à vos jets de sauvegarde contre la progression d’une maladie. Dès que vous avez bu l'antimaladie, vous pouvez immédiatement tenter un jet de sauvegarde pour enrayer votre affliction pour contrer une maladie de niveau 14 ou moins. En cas de succès, vous êtes guéri.</span></p>
+<p>@Compendium[pf2e.consumable-effects.qVKrrKpTghgMIuGH]{Effet: Antimaladie (majeur)}</p>
