--- a/data/equipment/consumable-01-Vy3z2cIQ8uJRUMYw.htm
+++ b/data/equipment/consumable-01-Vy3z2cIQ8uJRUMYw.htm
@@ -1,7 +1,6 @@
 Name: Refined Pesh
 Nom: Pesh raffiné
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>When eaten or smoked, pesh gives users a sense of well-being, sometimes with hallucinations, aggression, and exhaustion.</p>
@@ -16,10 +15,10 @@ Nom: Pesh raffiné
 ------ Description (fr) ------
 <p>Quand il est mangé ou fumé, le pesh confère à son utilisateur un sentiment de bien-être qui s’accompagne parfois d’hallucinations, d’une certaine agressivité et de fatigue</p>
 <hr>
-<p><span id="ctl00_MainContent_DetailedOutput"><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</span></p>
-<p><strong>Jet de sauvegarde</strong> Vigueur DD 12</p>
-<p><strong>Délai</strong> 1 minute/p>
-<p><strong>Durée maximum</strong> 6 heures </p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Ingeré, Inhalé)</p
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 12;</p>
+<p><strong>Délai</strong> 1 minute;</p>
+<p><strong>Durée maximum</strong> 6 heures;</p>
 <p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} 1 et bonus d’objet de +2 aux jets de sauvegarde contre la terreur (1 minute)</p>
 <p><strong>Stade 2</strong> 1 point de vie temporaire par niveau (Seulement la première fois que vous atteignez ce stade), bonus d'objet +2 aux jets de sauvegarde contre la terreur (1 minute), @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroit} 1 et Stupefié 1 (1 minute)</p>
-<p><strong>Stade 3</strong> Maladroit 2 et Stupefié 2 (1 heure)<br></span></p>
+<p><strong>Stade 3</strong> Maladroit 2 et Stupefié 2 (1 heure)</p>
