--- a/data/equipment/consumable-01-uG3xtNrs26scOVgW.htm
+++ b/data/equipment/consumable-01-uG3xtNrs26scOVgW.htm
@@ -1,7 +1,6 @@
 Name: Leaper's Elixir (Lesser)
 Nom: Élixir du sauteur (inférieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
