--- a/data/equipment/consumable-07-6eQvHNHf1IC2X5Rx.htm
+++ b/data/equipment/consumable-07-6eQvHNHf1IC2X5Rx.htm
@@ -1,7 +1,6 @@
 Name: Leaper's Elixir (Greater)
 Nom: Elixir du sauteur (supérieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
