--- a/data/equipment/consumable-01-ZCsksGf6NPUKz2Uw.htm
+++ b/data/equipment/consumable-01-ZCsksGf6NPUKz2Uw.htm
@@ -1,13 +1,12 @@
 Name: Potency Crystal
 Nom: Cristal de puissance
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">F</span> Envision</p>
 <p><strong>Trigger</strong> You make an attack with the affixed weapon, but you haven't rolled yet</p>
 <p>This fluorite crystal glows with a strange phosphorescence. When you activate the crystal, the weapon becomes a <em>+1 striking weapon</em> for the rest of the turn, gaining a +1 item bonus to the attack roll and increasing the damage on a hit to two weapon damage dice.</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">F</span> Imaginer</p>
-<p><span>Ce cristal de fluorite émet une étrange phosphorescence. Lorsque vous l’activez, l’arme devient une arme de frappe +1 pendant le reste de votre tour. Elle gagne un bonus d’objet de +1 aux jets d’attaque et ses dégâts sur un coup passent à deux fois ses dés de dégâts.<br /></span></p>
-<p> <strong>Déclencheur</strong>  Vous portez une attaque avec l’arme support, mais n’avez pas encore lancé le dé. </span></p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Imaginer</p>
+<p>Ce cristal de fluorite émet une étrange phosphorescence. Lorsque vous l’activez, l’arme devient une arme de frappe +1 pendant le reste de votre tour. Elle gagne un bonus d’objet de +1 aux jets d’attaque et ses dégâts sur un coup passent à deux fois ses dés de dégâts.</p>
+<p> <strong>Déclencheur</strong>  Vous portez une attaque avec l’arme support, mais n’avez pas encore lancé le dé.</p>
