--- a/data/equipment/consumable-07-OcBPjVplvy2GbQ8P.htm
+++ b/data/equipment/consumable-07-OcBPjVplvy2GbQ8P.htm
@@ -1,7 +1,6 @@
 Name: Comprehension Elixir (Greater)
 Nom: Elixir de compréhension (supérieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This bitter draught opens your mind to the potential of the written word. For the listed duration after drinking this elixir, you can understand any words you read, so long as they are written in a common language. This elixir doesn't automatically allow you to understand codes or extremely esoteric passages-you still need to attempt a skill check to Decipher Writing. The duration is 10 minutes.</p>
