--- a/data/equipment/consumable-04-eKpL2j1JA92wndO6.htm
+++ b/data/equipment/consumable-04-eKpL2j1JA92wndO6.htm
@@ -1,7 +1,6 @@
 Name: Zerk
 Nom: Zerk
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This bitter paste is used among some gladiatorial rings for its short-term benefits in a fight.</p>
@@ -13,10 +12,10 @@ Nom: Zerk
 <p><strong>Stage 2</strong> @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drained} 1 (1 hour)</p>
 ------ Description (fr) ------
 <p>Cette pâte amère est utilisée dans certains cercles de gladiateurs pour ses avantages à court terme lors d’un combat</p>
-<hr>
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <p><strong>Jet de sauvegarde</strong> Vigueur DD 20</p>
 <p><strong>Durée maximale</strong> 1 heure</p>
-<p><strong>Stade 1</strong>  bonus d’objet de +2 aux jets de Perception pour l’initiative et si vous avez une addiction au zerk, vos attaques avec vos armes de mêlée et à mains nues infligent 2 dégâts supplémentaires au cours du premier round de combat d’une rencontre (1 minute) ;</p>
-<p><strong>Stade 2</strong> @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drained} 1 (1 heure)</p>
-<p>@Compendium[pf2e.consumable-effects.ztxW3lBPRcesF7wK]{Effet: Zerk </p>
+<p><strong>Stade 1</strong>  bonus d’objet de +2 aux jets de Perception pour l’initiative et si vous avez une addiction au zerk, vos attaques avec vos armes de mêlée et à mains nues infligent 2 dégâts supplémentaires au cours du premier round de combat d’une rencontre (1 minute);</p>
+<p><strong>Stade 2</strong> @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} 1 (1 heure)</p>
+<p>@Compendium[pf2e.consumable-effects.ztxW3lBPRcesF7wK]{Effet: Zerk} </p>
