--- a/data/equipment/consumable-04-FqbDpztscJfM4XMe.htm
+++ b/data/equipment/consumable-04-FqbDpztscJfM4XMe.htm
@@ -1,7 +1,6 @@
 Name: Shrinking Potion
 Nom: Potion de rétrécissement (standard)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This fungus-flavored potion conveys the effects of the @Compendium[pf2e.spells-srd.PjhUmyKnq6K5uDby]{Shrink} spell to make you and all your gear smaller. After the onset, you remain small for 10 minutes.</p>
