--- a/data/equipment/consumable-04-ilB279mxqXnlaSFj.htm
+++ b/data/equipment/consumable-04-ilB279mxqXnlaSFj.htm
@@ -1,7 +1,6 @@
 Name: Viper Arrow
 Nom: Flèche vipère
-État: changé
-État d'origine: officielle
+État:  officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Command</p>
@@ -10,7 +9,7 @@ Nom: Flèche vipère
 <p>The viper has the summoned trait and acts at the end of your turn, even though you didn't use the Sustain a Spell action. It is under the GM's control, but it generally attacks the creature the arrow struck. The viper vanishes after 1 minute or when slain.</p>
 <p><strong>Craft Requirements</strong> Supply one casting of @Compendium[pf2e.spells-srd.4YnON9JHYqtLzccu]{Summon Animal}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Sur ordre</p>
-<p><span>Le fût de cette flèche est couvert de fines écailles vertes et sa tête en fer se termine par deux pointes rappelant des crochets. Quand une flèche vipère activée touche sa cible, elle se change en vipère @Compendium[pf2e.pathfinder-bestiary.lFlXmieuHTBIonhj]{Viper}. La cible est affectée par le venin de la vipère, comme si elle avait été mordue. La vipère tombe ensuite dans un espace dégagé adjacent à la cible <br></span></p>
-<p><span>Elle possède le trait convoqué et agit à la fin de votre tour, même si vous n’avez pas utilisé l’action Maintenir un sort. Elle est sous le contrôle du MJ, mais attaque généralement la créature que la flèche a touchée. La vipère disparaît au bout de 1 minute ou une fois tuée.<br></span></p>
-<p><span><strong>Conditions de fabrication</strong>  Fournir une incantation de @Compendium[pf2e.spells-srd.4YnON9JHYqtLzccu]{Convocation d’animal}</span></p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Sur ordre</p>
+<p>Le fût de cette flèche est couvert de fines écailles vertes et sa tête en fer se termine par deux pointes rappelant des crochets. Quand une flèche vipère activée touche sa cible, elle se change en vipère @Compendium[pf2e.pathfinder-bestiary.lFlXmieuHTBIonhj]{Viper}. La cible est affectée par le venin de la vipère, comme si elle avait été mordue. La vipère tombe ensuite dans un espace dégagé adjacent à la cible.</p>
+<p>Elle possède le trait convoqué et agit à la fin de votre tour, même si vous n’avez pas utilisé l’action Maintenir un sort. Elle est sous le contrôle du MJ, mais attaque généralement la créature que la flèche a touchée. La vipère disparaît au bout de 1 minute ou une fois tuée.</p>
+<p><strong>Conditions de fabrication</strong>  Fournir une incantation de @Compendium[pf2e.spells-srd.4YnON9JHYqtLzccu]{Convocation d’animal}</p>
