--- a/data/equipment/consumable-02-88pGCHV0uKMskTVO.htm
+++ b/data/equipment/consumable-02-88pGCHV0uKMskTVO.htm
@@ -1,5 +1,5 @@
 Name: Darkvision Elixir (Lesser)
-Nom: Élixir de vision dans le noir (mineure)
+Nom: Élixir de vision dans le noir (inférieur)
 État: officielle
 
 ------ Description (en) ------
@@ -9,4 +9,4 @@ Nom: Élixir de vision dans le noir (mineure)
 ------ Description (fr) ------
 <p><strong>Activation</strong><span class="pf2-icon">1</span> Interagir</p>
 <p>Une fois que vous avez bu cet élixir, votre vue devient plus perçante dans les ténèbres. Vous gagnez @Compendium[pf2e.familiar-abilities.0Xrkk46IM43iI1Fv]{Vision dans le noir} pendant 10 minutes.</p>
-<p>@Compendium[pf2e.spell-effects.a3hqeAXpmMZgMWuB]{Effet: Élixir de Vision dans le noir (mineur)}</p>
+<p>@Compendium[pf2e.spell-effects.a3hqeAXpmMZgMWuB]{Effet: Élixir de Vision dans le noir (inférieur)}</p>
