--- a/data/equipment/consumable-04-zC7LipQPHRYw2RXx.htm
+++ b/data/equipment/consumable-04-zC7LipQPHRYw2RXx.htm
@@ -1,7 +1,6 @@
 Name: Barkskin Potion
 Nom: Potion de peau d'écorce
-État: changé
-État d'origine: officielle
+État: fficielle
 
 ------ Description (en) ------
 <p>After you drink this bitter draft, your skin thickens like bark. You gain the effects of a 2nd-level @Compendium[pf2e.spells-srd.YWrfKetOqDwVFut7]{Barkskin} spell for 10 minutes.</p>
