--- a/data/equipment/consumable-05-26bM70yn28MjDT9A.htm
+++ b/data/equipment/consumable-05-26bM70yn28MjDT9A.htm
@@ -1,7 +1,6 @@
 Name: Elven Absinthe
 Nom: Absinthe elfique
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Specialists in Kyonin prepare this emerald-green beverage.</p>
@@ -15,11 +14,11 @@ Nom: Absinthe elfique
 <p><strong>Stage 3</strong> @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupefied} 4 (1 hour)</p>
 ------ Description (fr) ------
 <p>Des spécialistes du Kyonin préparent ce breuvage couleur émeraude.</p>
-<hr>
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
-<p><strong>Jet de sauvegarde</strong> Vigueur DD 20</p>
-<p><strong>Délai</strong> 1 heure</p>
-<p><strong>Durée maximale</strong> 1 jour</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 20;</p>
+<p><strong>Délai</strong> 1 heure;</p>
+<p><strong>Durée maximale</strong> 1 jour;</p>
 <p><strong>Stade 1</strong> 1 bonus d’objet de +1 aux tests de Diplomatie et de Représentation (1 h) ;</p>
 <p><strong>Stade 2</strong> @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drained} 2 (1 heure)</p>
 <p><strong>Stade 3</strong> @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupefied} 4 (1 heure)</p>
