--- a/data/equipment/consumable-05-5RGNjhDxZ0yMhTds.htm
+++ b/data/equipment/consumable-05-5RGNjhDxZ0yMhTds.htm
@@ -1,7 +1,6 @@
 Name: Hunting Spider Venom
 Nom: Venin d'araignée chasseresse
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This venom erodes its target's defenses, aiding the spider in securing prey.</p>
@@ -13,10 +12,11 @@ Nom: Venin d'araignée chasseresse
 <p><strong>Stage 2</strong> [[/r 1d12#poison]] poison damage, @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Clumsy} 1, and flat-footed (1 round)</p>
 <p><strong>Stage 3</strong> [[/r 2d6#poison]] poison damage, clumsy 2, and flat-footed (1 round)</p>
 ------ Description (fr) ------
-<p><span">Ce venin érode les défenses de la victime, aidant l’araignée à la maîtriser.<br></span></p>
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">D</span> Interagir (Blessure)</p>
-<p><span><strong>Jet de sauvegarde</strong>  Vigueur DD 21 DC; </p>
+<p><span">Ce venin érode les défenses de la victime, aidant l’araignée à la maîtriser.</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Blessure]</p>
+<p><strong>Jet de sauvegarde</strong>  Vigueur DD 21 DC; </p>
 <p><strong>Durée maximum</strong> 6 rounds; </p>
-<p><strong>Stade 1</strong> [[/r 1d10#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris au dépourvu} (1 round) ;</p> 
-<p><strong>Stade 2</strong> [[/r 1d12#poison]] dégâts de poison, @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroit} 1 et pris au dépourvu (1 round) ;</p>
-<p><strong>Stade 3</strong> [[/r 2d6#poison]] dégâts de poison, maladroit 2 et pris au dépourvu (1 round)<br></span></p>
+<p><strong>Stade 1</strong> [[/r 1d10#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris au dépourvu} (1 round);</p> 
+<p><strong>Stade 2</strong> [[/r 1d12#poison]] dégâts de poison, @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroit} 1 et Pris au dépourvu (1 round);</p>
+<p><strong>Stade 3</strong> [[/r 2d6#poison]] dégâts de poison, maladroit 2 et pris au dépourvu (1 round)</p>
