--- a/data/equipment/consumable-05-rjUJEY424jyG9dGn.htm
+++ b/data/equipment/consumable-05-rjUJEY424jyG9dGn.htm
@@ -1,7 +1,6 @@
 Name: Cytillesh
 Nom: Cytillesh
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Deros use cytillesh in a variety of ways, and some surface-dwellers seek out the fungus for their own use. Memories lost to cytillesh can be restored through modify memory. The save for addiction to cytillesh is DC 20, and the addiction has the virulent trait.</p>
@@ -13,10 +12,10 @@ Nom: Cytillesh
 <p><strong>Stage 2</strong> lose all memories made in the previous hour (1 hour)</p>
 ------ Description (fr) ------
 <p>Les deros utilisent le cytillesh de différentes manières et certains habitants de la surface recherchent ce champignon pour leur propre usage. Les souvenirs perdus à cause du cytillesh peuvent être récupérés grâce à modification de mémoire. Le jet de sauvegarde pour l’addiction au cytillesh a un DD de 20 et cette addiction a le trait virulent.</p>
-<hr>
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir(Ingéré)</p>
-<p><strong>Jet de sauvegarde</strong> Vigueur DD 15</p>
-<p><strong>Durée maximale</strong> 8 heures</p>
-<p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupefied} 1 (1 minute)</p>
+<hr />
+<p><strong>Activate</strong> <span class="pf2-icon">A</span> Interagir (Ingéré)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 15;</p>
+<p><strong>Durée maximale</strong> 8 heures;</p>
+<p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupefié} 1 (1 minute);</p>
 <p><strong>Stade 2</strong> perte de tous les souvenirs de l’heure précédente (1 heure)</p>
-<p></p>
+
