--- a/data/equipment/consumable-06-HAEz4sSa6OH6C7Cs.htm
+++ b/data/equipment/consumable-06-HAEz4sSa6OH6C7Cs.htm
@@ -1,7 +1,6 @@
 Name: Truth Potion
 Nom: Potion de vérité
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>For 10 minutes after drinking this astringent potion, you can't intentionally lie and may be compelled to tell the truth. Upon drinking the potion, attempt a DC 19 Will save. You can voluntarily fail or critically fail.</p>
