--- a/data/equipment/consumable-06-QGXNqpP5KvSldoZz.htm
+++ b/data/equipment/consumable-06-QGXNqpP5KvSldoZz.htm
@@ -1,7 +1,6 @@
 Name: Giant Scorpion Venom
 Nom: Venin de scorpion géant
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Scorpion venom is excruciating and its effects are somewhat debilitating.</p>
@@ -13,10 +12,10 @@ Nom: Venin de scorpion géant
 <p><strong>Stage 2</strong> [[/r 2d10#poison]] poison damage and enfeebled 1 (1 round)</p>
 <p><strong>Stage 3</strong> [[/r 2d10#poison]] poison damage and enfeebled 2 (1 round)</p>
 ------ Description (fr) ------
-<p><span>Le venin de scorpion est extrêmement douloureux et possède des effets affaiblissants<br></span></p>
-<p><strong>Activate</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">D</span> Interagir (Blessure)</p>
-<p><span><strong>Jet de sauvegarde</strong> Vigueur DD 22;</p>
+<p>Le venin de scorpion est extrêmement douloureux et possède des effets affaiblissants</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Blessure)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 22;</p>
 <p><strong>Durée maximum</strong> 6 rounds;</p> 
 <p><strong>Stade 1</strong> [[/r 1d10#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} 1 (1 round);</p> 
-<p><strong>Stade 2</strong> [[/r 2d10#poison]] dégâts et affaibli 1 (1 round);</p>
-<p><strong>Stade 3</strong> [[/r 2d10#poison]] dégâts de poison et affaibli 2 (1 round)<br></span></p>
+<p><strong>Stade 2</strong> [[/r 2d10#poison]] dégâts et Affaibli 1 (1 round);</p>
+<p><strong>Stade 3</strong> [[/r 2d10#poison]] dégâts de poison et Affaibli 2 (1 round)></p>
