--- a/data/equipment/consumable-07-76T49dJYfxIrPvQe.htm
+++ b/data/equipment/consumable-07-76T49dJYfxIrPvQe.htm
@@ -1,7 +1,6 @@
 Name: Malyass Root Paste
 Nom: Pâte de racine de malyasse
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Malyass root paste sees use to impede opponents in athletic competitions, in addition to espionage and tracking.</p>
@@ -14,7 +13,7 @@ Nom: Pâte de racine de malyasse
 <p><strong>Stage 3</strong> clumsy 3, @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Flat-Footed}, and -30-foot status penalty to all Speeds</p>
 ------ Description (fr) ------
 <p>La pâte de racine de malyasse est utilisée pour gêner ses adversaires lors des compétitions d’athlétisme, ainsi que pour l’espionnage et la traque.</p>
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">T</span> Interagir (Contact)</p>
+<p><strong>Activation</strong> <span class="pf2-icon">T</span> Interagir (Contact)</p>
 <p><strong>Jet de sauvegarde</strong> Vigueur DD 26; </p>
 <p><strong>Délai</strong>1 minute;</p> 
 <p><strong>Durée maximum</strong> 6 minutes;</p> 
